feat: add sentry

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ RESEND_FROM_EMAIL=
 NEXT_PUBLIC_SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# SENTRY
+SENTRY_DSN=ВАШ_DSN
+NEXT_PUBLIC_SENTRY_DSN=ВАШ_DSN
